Fixed lection practice 2

--- a/Lection practice 2/i18n/i18n.properties
+++ b/Lection practice 2/i18n/i18n.properties
@@ -1,5 +1,5 @@
-header = People
-peopleList = List of People
+header = Users
+peopleList = List of users
 # App Descriptor
 appTitle=Navigation & Routing Tutorial
 appDescription=A simple app that explains how to use navigation and routing features of SAPUI5
@@ -12,3 +12,5 @@ lastNameLabelText=Last Name
 genderLabelText=Gender
 emailsLabelText=Emails
 addressLabelText=Address
+
+page2HeaderText = User details
